# causalinference

./: .gitignore  README.Rmd  README.md  pyproject.toml
qmd/: causal_inference.qmd  coursera_project.qmd  coursera_project_week_3.qmd  coursera_project_week_4.qmd  linear_regression.qmd
