[tool.poetry]
name = "causalinference"
version = "0.1.0"
description = ""
authors = ["Hendrik Wagenseil <hendrik.wagenseil@addium.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
